--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <p class="stats">Time sleeped: <span class="statsContent">0s</span></p>
         <p class="stats">Times napped: <span class="statsContent">Not enough</span></p>
         <p class="stats">Hur dog du snäckan? <span class="statsContent">How did you die the snail?</span></p>
-        <p class="stats">Comapany <span class="statsContent">Lethal</span></p>
+        <p class="stats">Company <span class="statsContent">Lethal</span></p>
         <p class="stats">Hotel? <span class="statsContent">Trivago</span></p>
     </div>
 </body>
